--- a/Neuralnetworkcode.ipynb
+++ b/Neuralnetworkcode.ipynb
@@ -9,10 +9,10 @@
     "from __future__ import print_function\n",
     "import numpy as np\n",
     "np.random.seed(1337)  # for reproducibility\n",
-    "\n",
+    "import tensorflow as tf\n",
     "from keras.datasets import mnist\n",
     "from keras.models import Sequential\n",
-    "from keras.layers import Dense, Activation, Flatten\n",
+    "from keras.layers import Dense, Flatten\n",
     "from keras.layers import Convolution2D, MaxPooling2D\n",
     "from keras.utils import np_utils\n",
     "from keras import backend as K"
@@ -55,6 +55,7 @@
     "    X_test = X_test.reshape(X_test.shape[0], img_rows, img_cols, 1)\n",
     "    input_shape = (img_rows, img_cols, 1)\n",
     "\n",
+    "# X_train = tf.keras.utils.normalize(X_train, axis=1)\n",
     "X_train = X_train.astype('float32')\n",
     "X_test = X_test.astype('float32')\n",
     "X_train /= 255\n",
@@ -70,44 +71,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/10\n",
-      "469/469 [==============================] - 7s 15ms/step - loss: 0.5099 - accuracy: 0.8526 - val_loss: 0.2396 - val_accuracy: 0.9277\n",
-      "Epoch 2/10\n",
-      "469/469 [==============================] - 8s 17ms/step - loss: 0.2068 - accuracy: 0.9396 - val_loss: 0.1557 - val_accuracy: 0.9527\n",
-      "Epoch 3/10\n",
-      "469/469 [==============================] - 10s 21ms/step - loss: 0.1545 - accuracy: 0.9545 - val_loss: 0.1278 - val_accuracy: 0.9624\n",
-      "Epoch 4/10\n",
-      "469/469 [==============================] - 11s 24ms/step - loss: 0.1293 - accuracy: 0.9614 - val_loss: 0.1070 - val_accuracy: 0.9672\n",
-      "Epoch 5/10\n",
-      "469/469 [==============================] - 11s 23ms/step - loss: 0.1122 - accuracy: 0.9662 - val_loss: 0.0956 - val_accuracy: 0.9700\n",
-      "Epoch 6/10\n",
-      "469/469 [==============================] - 9s 19ms/step - loss: 0.1008 - accuracy: 0.9699 - val_loss: 0.0870 - val_accuracy: 0.9709\n",
-      "Epoch 7/10\n",
-      "469/469 [==============================] - 9s 18ms/step - loss: 0.0913 - accuracy: 0.9726 - val_loss: 0.0886 - val_accuracy: 0.9732\n",
-      "Epoch 8/10\n",
-      "469/469 [==============================] - 9s 20ms/step - loss: 0.0824 - accuracy: 0.9757 - val_loss: 0.0905 - val_accuracy: 0.9713\n",
-      "Epoch 9/10\n",
-      "469/469 [==============================] - 10s 22ms/step - loss: 0.0749 - accuracy: 0.9776 - val_loss: 0.0732 - val_accuracy: 0.9764\n",
-      "Epoch 10/10\n",
-      "469/469 [==============================] - 9s 20ms/step - loss: 0.0695 - accuracy: 0.9788 - val_loss: 0.0715 - val_accuracy: 0.9767\n",
-      "Test score: 0.07152210175991058\n",
-      "Test accuracy: 0.9767000079154968\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model = Sequential([\n",
-    "    Convolution2D(3,(5,5),padding='same',input_shape=input_shape, activation='relu'),\n",
+    "    Convolution2D(20,(5,5),padding='same',input_shape=input_shape, activation='relu'),\n",
     "    MaxPooling2D(pool_size=(2, 2), strides=(2, 2)),\n",
     "    Flatten(),\n",
-    "    Dense(32, activation='relu'),\n",
+    "    Dense(128, activation='relu'),\n",
+    "    Dense(128, activation='relu'),\n",
+    "    Dense(128, activation='relu'),\n",
     "    Dense(nb_classes, activation='softmax')]\n",
     ")\n",
     "model.compile(loss='categorical_crossentropy',\n",
@@ -124,19 +98,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "INFO:tensorflow:Assets written to: model.tf\\assets\n",
-      "Saved model to disk\n",
-      "training complete!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "model.save(\"model.tf\")\n",
@@ -147,22 +111,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 164,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from PIL import Image, ImageChops\n",
+    "from PIL import Image\n",
     "img = Image.open('a.png')\n",
     "img = img.resize((28,28))\n",
     "img = np.array(img.getdata()).reshape(img.size[0],img.size[1],1)\n",
@@ -175,351 +128,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(10000, 28, 28, 1)\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(X_test.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 89,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[[[ True],\n",
-       "         [ True],\n",
-       "         [ True],\n",
-       "         ...,\n",
-       "         [ True],\n",
-       "         [ True],\n",
-       "         [ True]],\n",
-       "\n",
-       "        [[ True],\n",
-       "         [ True],\n",
-       "         [ True],\n",
-       "         ...,\n",
-       "         [ True],\n",
-       "         [ True],\n",
-       "         [ True]],\n",
-       "\n",
-       "        [[ True],\n",
-       "         [ True],\n",
-       "         [ True],\n",
-       "         ...,\n",
-       "         [ True],\n",
-       "         [ True],\n",
-       "         [ True]],\n",
-       "\n",
-       "        ...,\n",
-       "\n",
-       "        [[ True],\n",
-       "         [ True],\n",
-       "         [ True],\n",
-       "         ...,\n",
-       "         [ True],\n",
-       "         [ True],\n",
-       "         [ True]],\n",
-       "\n",
-       "        [[ True],\n",
-       "         [ True],\n",
-       "         [ True],\n",
-       "         ...,\n",
-       "         [ True],\n",
-       "         [ True],\n",
-       "         [ True]],\n",
-       "\n",
-       "        [[ True],\n",
-       "         [ True],\n",
-       "         [ True],\n",
-       "         ...,\n",
-       "         [ True],\n",
-       "         [ True],\n",
-       "         [ True]]],\n",
-       "\n",
-       "\n",
-       "       [[[ True],\n",
-       "         [ True],\n",
-       "         [ True],\n",
-       "         ...,\n",
-       "         [ True],\n",
-       "         [ True],\n",
-       "         [ True]],\n",
-       "\n",
-       "        [[ True],\n",
-       "         [ True],\n",
-       "         [ True],\n",
-       "         ...,\n",
-       "         [ True],\n",
-       "         [ True],\n",
-       "         [ True]],\n",
-       "\n",
-       "        [[ True],\n",
-       "         [ True],\n",
-       "         [ True],\n",
-       "         ...,\n",
-       "         [ True],\n",
-       "         [ True],\n",
-       "         [ True]],\n",
-       "\n",
-       "        ...,\n",
-       "\n",
-       "        [[ True],\n",
-       "         [ True],\n",
-       "         [ True],\n",
-       "         ...,\n",
-       "         [ True],\n",
-       "         [ True],\n",
-       "         [ True]],\n",
-       "\n",
-       "        [[ True],\n",
-       "         [ True],\n",
-       "         [ True],\n",
-       "         ...,\n",
-       "         [ True],\n",
-       "         [ True],\n",
-       "         [ True]],\n",
-       "\n",
-       "        [[ True],\n",
-       "         [ True],\n",
-       "         [ True],\n",
-       "         ...,\n",
-       "         [ True],\n",
-       "         [ True],\n",
-       "         [ True]]],\n",
-       "\n",
-       "\n",
-       "       [[[ True],\n",
-       "         [ True],\n",
-       "         [ True],\n",
-       "         ...,\n",
-       "         [ True],\n",
-       "         [ True],\n",
-       "         [ True]],\n",
-       "\n",
-       "        [[ True],\n",
-       "         [ True],\n",
-       "         [ True],\n",
-       "         ...,\n",
-       "         [ True],\n",
-       "         [ True],\n",
-       "         [ True]],\n",
-       "\n",
-       "        [[ True],\n",
-       "         [ True],\n",
-       "         [ True],\n",
-       "         ...,\n",
-       "         [ True],\n",
-       "         [ True],\n",
-       "         [ True]],\n",
-       "\n",
-       "        ...,\n",
-       "\n",
-       "        [[ True],\n",
-       "         [ True],\n",
-       "         [ True],\n",
-       "         ...,\n",
-       "         [ True],\n",
-       "         [ True],\n",
-       "         [ True]],\n",
-       "\n",
-       "        [[ True],\n",
-       "         [ True],\n",
-       "         [ True],\n",
-       "         ...,\n",
-       "         [ True],\n",
-       "         [ True],\n",
-       "         [ True]],\n",
-       "\n",
-       "        [[ True],\n",
-       "         [ True],\n",
-       "         [ True],\n",
-       "         ...,\n",
-       "         [ True],\n",
-       "         [ True],\n",
-       "         [ True]]],\n",
-       "\n",
-       "\n",
-       "       ...,\n",
-       "\n",
-       "\n",
-       "       [[[ True],\n",
-       "         [ True],\n",
-       "         [ True],\n",
-       "         ...,\n",
-       "         [ True],\n",
-       "         [ True],\n",
-       "         [ True]],\n",
-       "\n",
-       "        [[ True],\n",
-       "         [ True],\n",
-       "         [ True],\n",
-       "         ...,\n",
-       "         [ True],\n",
-       "         [ True],\n",
-       "         [ True]],\n",
-       "\n",
-       "        [[ True],\n",
-       "         [ True],\n",
-       "         [ True],\n",
-       "         ...,\n",
-       "         [ True],\n",
-       "         [ True],\n",
-       "         [ True]],\n",
-       "\n",
-       "        ...,\n",
-       "\n",
-       "        [[ True],\n",
-       "         [ True],\n",
-       "         [ True],\n",
-       "         ...,\n",
-       "         [ True],\n",
-       "         [ True],\n",
-       "         [ True]],\n",
-       "\n",
-       "        [[ True],\n",
-       "         [ True],\n",
-       "         [ True],\n",
-       "         ...,\n",
-       "         [ True],\n",
-       "         [ True],\n",
-       "         [ True]],\n",
-       "\n",
-       "        [[ True],\n",
-       "         [ True],\n",
-       "         [ True],\n",
-       "         ...,\n",
-       "         [ True],\n",
-       "         [ True],\n",
-       "         [ True]]],\n",
-       "\n",
-       "\n",
-       "       [[[ True],\n",
-       "         [ True],\n",
-       "         [ True],\n",
-       "         ...,\n",
-       "         [ True],\n",
-       "         [ True],\n",
-       "         [ True]],\n",
-       "\n",
-       "        [[ True],\n",
-       "         [ True],\n",
-       "         [ True],\n",
-       "         ...,\n",
-       "         [ True],\n",
-       "         [ True],\n",
-       "         [ True]],\n",
-       "\n",
-       "        [[ True],\n",
-       "         [ True],\n",
-       "         [ True],\n",
-       "         ...,\n",
-       "         [ True],\n",
-       "         [ True],\n",
-       "         [ True]],\n",
-       "\n",
-       "        ...,\n",
-       "\n",
-       "        [[ True],\n",
-       "         [ True],\n",
-       "         [ True],\n",
-       "         ...,\n",
-       "         [ True],\n",
-       "         [ True],\n",
-       "         [ True]],\n",
-       "\n",
-       "        [[ True],\n",
-       "         [ True],\n",
-       "         [ True],\n",
-       "         ...,\n",
-       "         [ True],\n",
-       "         [ True],\n",
-       "         [ True]],\n",
-       "\n",
-       "        [[ True],\n",
-       "         [ True],\n",
-       "         [ True],\n",
-       "         ...,\n",
-       "         [ True],\n",
-       "         [ True],\n",
-       "         [ True]]],\n",
-       "\n",
-       "\n",
-       "       [[[ True],\n",
-       "         [ True],\n",
-       "         [ True],\n",
-       "         ...,\n",
-       "         [ True],\n",
-       "         [ True],\n",
-       "         [ True]],\n",
-       "\n",
-       "        [[ True],\n",
-       "         [ True],\n",
-       "         [ True],\n",
-       "         ...,\n",
-       "         [ True],\n",
-       "         [ True],\n",
-       "         [ True]],\n",
-       "\n",
-       "        [[ True],\n",
-       "         [ True],\n",
-       "         [ True],\n",
-       "         ...,\n",
-       "         [ True],\n",
-       "         [ True],\n",
-       "         [ True]],\n",
-       "\n",
-       "        ...,\n",
-       "\n",
-       "        [[ True],\n",
-       "         [ True],\n",
-       "         [ True],\n",
-       "         ...,\n",
-       "         [ True],\n",
-       "         [ True],\n",
-       "         [ True]],\n",
-       "\n",
-       "        [[ True],\n",
-       "         [ True],\n",
-       "         [ True],\n",
-       "         ...,\n",
-       "         [ True],\n",
-       "         [ True],\n",
-       "         [ True]],\n",
-       "\n",
-       "        [[ True],\n",
-       "         [ True],\n",
-       "         [ True],\n",
-       "         ...,\n",
-       "         [ True],\n",
-       "         [ True],\n",
-       "         [ True]]]])"
-      ]
-     },
-     "execution_count": 89,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print(X_test.shape)"
+   ]
   }
  ],
  "metadata": {
